--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="img/pic logo.jpg" alt="Our food time">
+            <img src="https://www.shutterstock.com/image-vector/time-logo-design-260nw-796214713.jpg" alt="Our food time">
         </div>
         <ul>
             <li class="item"><a href="">HOME</a></li>
@@ -54,19 +54,19 @@
         </div>
     </section>
     <section id="client-section">
-        <h1 class="h-primary"> Our client</h1>
+        <h1 class="h-primary">OUR COLLAB</h1>
         <div id="client">
             <div class="client-item">
-                <img src="img/app logo.png">
+                <img src="img/download.png">
             </div>
             <div class="client-item">
-                <img src="img/Apple-Logo.png">
+                <img src="img/download (1).png">
             </div>
             <div class="client-item">
-                <img src="img/inst logo.jpg">
+                <img src="img/download (2).png">
             </div>
             <div class="client-item">
-                <img src="img/micro logo.png">
+                <img src="img/starbucks-sign.jpg">
             </div>
         </div>
     </section>
