--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </section>
     <section id="contact">
-        <h1 class="h-primary">Contact us</h1>
+        <h1 class="h-primary">CONTACT US</h1>
         <div id="contact-box">
             <form action="">
                 <div class="form-group">
